// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props={} renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    container={true}
    justify="center"
  >
    <ForwardRef(WithStyles)
      className="App-grid-1"
      item={true}
      xs={12}
    >
      <Load />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;

exports[`when state.branches={} and state.isLoading=true renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    container={true}
    justify="center"
  >
    <ForwardRef(WithStyles)
      className="App-grid-1"
      item={true}
      xs={12}
    >
      <div
        className="App-progress-2"
      >
        <ForwardRef(WithStyles) />
      </div>
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;

exports[`with state.branches renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    container={true}
    justify="center"
  >
    <ForwardRef(WithStyles)
      className="App-grid-1"
      item={true}
      xs={12}
    >
      <Play
        branches={
          Object {
            "id": Object {
              "Text": Array [
                Object {
                  "Choice text": "choice",
                },
              ],
            },
          }
        }
        config={Object {}}
        id="id"
      />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;
